<resources>
    <string name="address_management">Address Management</string>
    <string name="address_management_help_text">Select one address or more that will be included in your QR code. A good idea is to use the MAC address of the Wi-Fi adapter (wlan0). But be aware that Android might change it depending on the system settings. If no MAC address is visible, then enable your Wi-Fi.</string>
    <string name="app_name" translatable="false">CupLink</string>
    <string name="app_website" translatable="false">https://github.com/RiV-chain/CupLink</string>
    <string name="audio_device_auto">%s (auto)</string>
    <string name="audio_device_bluetooth">Bluetooth</string>
    <string name="audio_device_earpiece">Earpiece</string>
    <string name="audio_device_fixed">%s (fixed)</string>
    <string name="audio_device_speakerphone">Speakerphone</string>
    <string name="audio_device_wired_headset">Wired Headset</string>
    <string name="button_abort">Abort</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_backup">Backup</string>
    <string name="button_restore">Restore</string>
    <string name="button_next">Next</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_rename">Rename</string>
    <string name="button_replace">Replace</string>
    <string name="button_reset">Reset</string>
    <string name="button_save">Save</string>
    <string name="button_skip">Skip</string>
    <string name="button_yes">Yes</string>
    <string name="call_authentication_failed">Authentication Failed</string>
    <string name="call_answer">Answer</string>
    <string name="call_connecting">Calling</string>
    <string name="call_connection_failed">Connection Failed</string>
    <string name="call_decline">Decline</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_error">Error</string>
    <string name="call_error_no_address">Error: No address</string>
    <string name="call_error_not_listening">Error: No app running</string>
    <string name="call_error_unresolved_hostname">Error: Cannot resolve address</string>
    <string name="call_no_network">No network - enable Wi-Fi\?</string>
    <string name="call_ringing">Ringing</string>
    <string name="call_waiting">Waiting</string>
    <string name="camera_back">Back</string>
    <string name="camera_front">Front</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="clear_history">Clear History</string>
    <string name="connected_to_address">(to %s)</string>
    <string name="connecting_to_address">Connecting to %s</string>
    <string name="contact_address_input">Address</string>
    <string name="contact_address_list">Addresses</string>
    <string name="contact_blocked">Blocked</string>
    <string name="contact_has_no_address_warning">Warning: Contact has no address</string>
    <string name="contact_menu_add">Add</string>
    <string name="contact_menu_block">Block</string>
    <string name="contact_menu_delete">Delete Contact</string>
    <string name="contact_menu_details">Contact Details</string>
    <string name="contact_menu_ping">Ping Contact</string>
    <string name="contact_menu_qrcode">Show Contact QR code</string>
    <string name="contact_menu_share">Share Contact</string>
    <string name="contact_menu_unblock">Unblock</string>
    <string name="contact_nickname">Nickname</string>
    <string name="contact_name_conflict">A contact with the same name exists.</string>
    <string name="contact_name_exists">A contact with that name exists already.</string>
    <string name="contact_name_invalid">Contact name is invalid.</string>
    <string name="contact_public_key">Public Key</string>
    <string name="contact_public_key_already_exists">Contact public key already exists.</string>
    <string name="contact_public_key_invalid">Contact public key is invalid.</string>
    <string name="custom_address">CUSTOM ADDRESS</string>
    <string name="dialog_title_delete_contact">Delete Contact?</string>
    <string name="dialog_title_import_backup">Import Backup</string>
    <string name="done">Done</string>
    <string name="empty_list_item">Empty</string>
    <string name="enter_contact_name">Change Nickname</string>
    <string name="enter_contact_public_key">Change Public Key</string>
    <string name="enter_password">Enter password</string>
    <string name="error">Error</string>
    <string name="error_address_exists">Address exists</string>
    <string name="error_address_invalid">Address invalid</string>
    <string name="error_address_multicast_not_supported">Multicast address not supported</string>
    <string name="failed_to_export_database">Failed to export database</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_number">Invalid Value (must be %d..%d)</string>
    <string name="invalid_qr">Invalid QR code</string>
    <string name="invalid_qr_code_data">Invalid data</string>
    <string name="menu_about">About</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_license">License</string>
    <string name="missed_call_from">Missed call from %s (%d)</string>
    <string name="missing_bluetooth_permission">Missing permission. Bluetooth not available.</string>
    <string name="missing_camera_permission">Missing permission. Camera not available.</string>
    <string name="missing_microphone_permission">Missing permission. Microphone not available.</string>
    <string name="no_value">None</string>
    <string name="overlay_permission_missing">Overlay permission missing. Won\'t be able to receive calls while in background!</string>
    <string name="paste_qr_code_data">Paste Contact Link Here</string>
    <string name="ping_all_contacts">Ping All Contacts</string>
    <string name="ping_contact">Ping %s</string>
    <string name="remove_all_events">Remove all events?</string>
    <string name="setting_read_only">Read Only</string>
    <string name="settings_addresses">Addresses</string>
    <string name="settings_auto_accept_calls">Auto Accept Calls</string>
    <string name="settings_automatic_status_updates">Automatic Contact Updates</string>
    <string name="settings_block_unknown">Block Unknown Callers</string>
    <string name="settings_camera_framerate">Default Framerate</string>
    <string name="settings_camera_resolution">Default Resolution</string>
    <string name="settings_connect_retries">Connect Retries</string>
    <string name="settings_connect_timeout">Connect Timeout (ms)</string>
    <string name="settings_database_password">Startup Password</string>
    <string name="settings_disable_audio_processing">Disable Audio Processing</string>
    <string name="settings_disable_cpu_overuse_detection">Disable CPU Overuse Detection</string>
    <string name="settings_disable_proximity_sensor">Disable Proximity Sensor</string>
    <string name="settings_enable_camera_by_default">Enable Camera By Default</string>
    <string name="settings_enable_microphone_by_default">Enable Microphone By Default</string>
    <string name="settings_menu_password">Menu Password</string>
    <string name="settings_name">Name</string>
    <string name="settings_nightmode">Night Mode</string>
    <string name="settings_exclusive_call_mode">Exclusive Call Mode</string>
    <string name="settings_public_key">Public Key</string>
    <string name="settings_push_to_talk">Push To Talk</string>
    <string name="settings_select_front_camera_by_default">Use Front Camera By Default</string>
    <string name="settings_settings_mode">Settings Mode</string>
    <string name="settings_show_username_as_logo">Show Username As Logo</string>
    <string name="settings_speakerphone_mode">Speakerphone</string>
    <string name="settings_start_on_bootup">Start On Bootup</string>
    <string name="settings_use_neighbor_table">Use Neighbor Table (ARP/ND)</string>
    <string name="settings_video_degradation_mode">Video Degradation</string>
    <string name="settings_video_hardware_acceleration">Video Hardware Acceleration</string>
    <string name="setup_address">Setup Address</string>
    <string name="setup_no_address_found">Could not find the MAC address of your Wi-Fi card. Enable Wi-Fi now (no Internet needed) or skip to configure later.</string>
    <string name="title_calls">Calls</string>
    <string name="title_contact_details">Contact Details</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_scan_qr_code">QR Code Scanning</string>
    <string name="title_settings">Settings</string>
    <string name="title_show_qr_code">Scan This QR Code</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="warning_no_addresses_configured">No address for QR code configured.</string>
    <string name="warning_no_addresses_found">Configured addresses not found. Did the network change?</string>
    <string name="wrong_password">Wrong password</string>
    <string name="report_dialog_text">Sorry, the application crashed.</string>
    <string name="report_dialog_comment">Please describe what were you doing when the app crashed:</string>
    <string name="tile_connecting">Connecting</string>
    <string name="tile_enabled">Enabled</string>
    <string name="tile_connected">Connected</string>
    <string name="permission_notification_text">Permission is missing. Please grant it in order to receive notifications.</string>
    <string name="channel_name">VPN Service</string>
    <string name="channel_description">Main channel for foreground notification</string>
    <string name="title_activity_peer_list">Public peers</string>
    <string name="node_info_copied">copied</string>
    <string name="peers">Public Peers</string>
    <string name="cuplink_call" translatable="false">CupLink call</string>
    <string name="is_calling">Calling</string>
    <string name="contact_is_invalid">Contact is invalid</string>
    <string name="add_contact_link_or_json">Enter contact link or contact JSON manually</string>
    <string name="connect_as_public_peer">Connect as a Public Peer</string>
    <string name="note_device_as_public_peer">Note: Connecting this device as a public peer may result in additional traffic utilization while it stays online. This may incur additional charges from your mobile operator.</string>
    <string name="agree_to_connect1">I agree to connect this device as a public peer.</string>
    <string name="settings_connect_as_public_peer">Connect as Public Peer</string>
    <string name="qr_code_image">Contact QR code image</string>
    <string name="port_status">Port status</string>
    <string name="search_multicast_peers">Search multicast peers</string>
    <string name="discoverable_over_multicast">Discoverable over multicast</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="call">Call</string>
    <string name="camera_on_when_screen_locked">Camera On When Screen Locked</string>
    <string name="connect">Connect</string>
    <string name="microphone_usage_message">Your call is being recorded by some other app(s)</string>
    <string name="add_peer">Add your peer</string>
    <string name="accept">Accept</string>
    <string name="duplicated_contact_data">Duplicated contact data</string>
    <string name="ignore_battery_optimizations">Ignore Battery Optimizations</string>
    <string name="busy">Busy</string>
    <string name="last_backup">Last backup</string>
    <string name="backup_size">Backup size</string>
    <string name="backup_result">Backup result</string>
    <string name="secure_backup_title">Secure your backup</string>
    <string name="secure_backup_description">Protect your CupLink identity with a strong backup password</string>
    <string name="export_success">was successfully exported</string>
</resources>