<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_30"
    android:background="@drawable/dialog_pptc_rounded_corner">

    <TextView
        android:id="@+id/checkboxDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:paddingBottom="16dp"
        android:text="@string/connect_as_public_peer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="@dimen/name_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guideInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/subtitle_text_size"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxDialogTitle" />

    <TextView
        android:id="@+id/noticeInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:text="@string/note_device_as_public_peer"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/subtitle_text_size"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideInfoText" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:minWidth="@dimen/padding_50"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:checked="false"
            android:textColor="@color/light_grey"
            android:text="@string/agree_to_connect1"
            app:layout_constraintStart_toStartOf="@+id/noticeInfoText"
            app:layout_constraintTop_toBottomOf="@+id/noticeInfoText"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/OkButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/padding_20"
        android:background="@drawable/next_button_background"
        android:fontFamily="@font/inter_regular"
        android:text="@string/button_ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/button_test_size"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox" />

</androidx.constraintlayout.widget.ConstraintLayout>
