<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_30"
    android:background="@drawable/dialog_pptc_rounded_corner">

    <TextView
        android:id="@+id/ChangePublicKeyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/PublicKeyEditLayout"
        android:layout_marginStart="10dp"
        android:textSize="23sp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/enter_contact_public_key"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PublicKeyEditLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/next_button_background"
        android:textColorHint="@color/light_grey"
        app:boxBackgroundMode="none"
        app:layout_constraintBottom_toTopOf="@+id/OkButton"
        app:layout_constraintEnd_toEndOf="@+id/OkButton"
        app:layout_constraintStart_toStartOf="@+id/OkButton"
        app:layout_constraintTop_toBottomOf="@+id/ChangePublicKeyTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PublicKeyEditText"
            style="@style/EditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/contact_public_key"
            android:paddingBottom="@dimen/padding_10"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:textColor="@color/light_grey"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/name_text_size"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/OkButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/padding_20"
        android:background="@drawable/next_button_background"
        android:fontFamily="@font/inter_regular"
        android:text="@string/button_ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/button_test_size"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PublicKeyEditLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
